// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admin PTB builders > addKeeper / removeKeeper 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
    ],
    "function": "add_keeper",
    "module": "global_config",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [],
  },
]
`;

exports[`admin PTB builders > addKeeper / removeKeeper 2`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
    ],
    "function": "remove_keeper",
    "module": "global_config",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [],
  },
]
`;

exports[`admin PTB builders > adminWithdraw 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
      "Input",
    ],
    "function": "admin_withdraw",
    "module": "waterx_prediction",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [
      "0x6321b712685d4c4921c15ff4790d7a9a2b2b7d3b44f8b19a2304e60ca3ad26c7::usd::USD",
    ],
  },
]
`;

exports[`admin PTB builders > createMarketRegistry 1`] = `
[
  {
    "argumentKinds": [
      "Input",
    ],
    "function": "create_market_registry",
    "module": "waterx_prediction",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [
      "0x6321b712685d4c4921c15ff4790d7a9a2b2b7d3b44f8b19a2304e60ca3ad26c7::usd::USD",
    ],
  },
]
`;

exports[`admin PTB builders > depositSettlement 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
    ],
    "function": "deposit_settlement",
    "module": "waterx_prediction",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [
      "0x6321b712685d4c4921c15ff4790d7a9a2b2b7d3b44f8b19a2304e60ca3ad26c7::usd::USD",
    ],
  },
]
`;

exports[`admin PTB builders > pauseMarket / unpauseMarket 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
      "Input",
    ],
    "function": "pause_market",
    "module": "waterx_prediction",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [
      "0x6321b712685d4c4921c15ff4790d7a9a2b2b7d3b44f8b19a2304e60ca3ad26c7::usd::USD",
    ],
  },
]
`;

exports[`admin PTB builders > pauseMarket / unpauseMarket 2`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
    ],
    "function": "unpause_market",
    "module": "waterx_prediction",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [
      "0x6321b712685d4c4921c15ff4790d7a9a2b2b7d3b44f8b19a2304e60ca3ad26c7::usd::USD",
    ],
  },
]
`;

exports[`admin PTB builders > setMinReserve 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
    ],
    "function": "set_min_reserve",
    "module": "waterx_prediction",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [
      "0x6321b712685d4c4921c15ff4790d7a9a2b2b7d3b44f8b19a2304e60ca3ad26c7::usd::USD",
    ],
  },
]
`;

exports[`admin PTB builders > setOrderCancelCooldownMs 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
    ],
    "function": "set_order_cancel_cooldown_ms",
    "module": "waterx_prediction",
    "package": "0x99be07b27dbbd846eec72213f0ec221b3e7d38c8bfdee3cbf578b9bfa5df3481",
    "typeArguments": [
      "0x6321b712685d4c4921c15ff4790d7a9a2b2b7d3b44f8b19a2304e60ca3ad26c7::usd::USD",
    ],
  },
]
`;
